--- a/WpfApp1/EditDoctor.xaml
+++ b/WpfApp1/EditDoctor.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="EditDoctor" Height="490" Width="652">
+        Title="EditDoctor" Height="584" Width="652">
     <Grid Margin="10">
         <!-- Определение двух колонок: слева – фото, справа – данные пациента -->
         <Grid.ColumnDefinitions>
@@ -26,13 +26,23 @@
             </Border>
             <TextBox x:Name="PhotoPathBox" Text="{Binding photo, Mode=TwoWay}" Visibility="Visible" Margin="0 5"/>
             <Button Content="Изменить фото" Margin="0,0,0,0" Click="SelectPhotoButton_Click"/>
-            <DataGrid Height="153" Margin="10">
+            <DataGrid Grid.Column="0" Grid.Row="1" Margin="10" Name="ScheduleGrid" AutoGenerateColumns="False" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="16" IsReadOnly="True" Height="auto" MouseDoubleClick="ScheduleGrid_MouseDoubleClick">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Width="35" Header="">
-
+                    <DataGridTextColumn Width="35" Binding="{Binding Name}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="VerticalAlignment" Value="Center"/>
+                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Width="180" Header="Время работы">
-
+                    <DataGridTextColumn Width="175" Header="Время работы" Binding="{Binding Text}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="VerticalAlignment" Value="Center"/>
+                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
@@ -167,6 +177,7 @@
 
         <!-- Кнопки сохранения/отмены -->
         <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Image Source="/Resources/delete.png" MouseDown="Image_MouseDown"></Image>
             <Button Content="Сохранить" Width="120" Height="40" Margin="5" Click="SaveButton_Click"/>
             <Button Content="Отмена" Width="120" Height="40" Margin="5" Click="CancelButton_Click"/>
         </StackPanel>
