--- a/WpfApp1/EditPatient.xaml
+++ b/WpfApp1/EditPatient.xaml
@@ -163,6 +163,7 @@
 
         <!-- Кнопки сохранения/отмены -->
         <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Image Source="/Resources/delete.png" MouseDown="Image_MouseDown"></Image>
             <Button Content="Сохранить" Width="120" Height="40" Margin="5" Click="SaveButton_Click"/>
             <Button Content="Отмена" Width="120" Height="40" Margin="5" Click="CancelButton_Click"/>
         </StackPanel>
