--- a/WpfApp1/SpecificPatientPage.xaml
+++ b/WpfApp1/SpecificPatientPage.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:av="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="av" x:Class="WpfApp1.SpecificPatientPage"
-        Title="SpecificPatientPage" Height="500" Width="874">
+        Title="SpecificPatientPage" Height="500" Width="854">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -83,6 +83,12 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <Button Grid.Row="1" Grid.Column="3" Width="200" Height="50" VerticalAlignment="Top" Margin="0 30" Click="Button_Click_2">Сформировать отчет</Button>
+        <StackPanel Grid.Row="1" Grid.Column="3">
+            <DockPanel HorizontalAlignment="Center">
+                <Button HorizontalContentAlignment="Center" x:Name="GiveSpravka" Width="100" Height="50" VerticalAlignment="Top" Margin="10" Click="GiveSpravka_Click"></Button>
+                <Button HorizontalContentAlignment="Center" x:Name="PrintTalon" Width="100" Height="50" VerticalAlignment="Top" Margin="10" Click="PrintTalon_Click"></Button>
+            </DockPanel>
+            <Button Width="150" HorizontalContentAlignment="Center" x:Name="MakeOtchet" Height="50" VerticalAlignment="Top" Margin="10" Click="Button_Click_2"></Button>
+        </StackPanel>
     </Grid>
 </Window>
