--- a/WpfApp1/EditDoctor.xaml
+++ b/WpfApp1/EditDoctor.xaml
@@ -177,7 +177,7 @@
 
         <!-- Кнопки сохранения/отмены -->
         <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Image Source="/Resources/delete.png" MouseDown="Image_MouseDown"></Image>
+            <Image Source="/Resources/delete.png" MouseDown="Image_MouseDown" RenderTransformOrigin="0.5,0.733"></Image>
             <Button Content="Сохранить" Width="120" Height="40" Margin="5" Click="SaveButton_Click"/>
             <Button Content="Отмена" Width="120" Height="40" Margin="5" Click="CancelButton_Click"/>
         </StackPanel>
