--- a/WpfApp1/PatientPage.xaml
+++ b/WpfApp1/PatientPage.xaml
@@ -44,7 +44,7 @@
                             <RowDefinition Height="auto"></RowDefinition>
                             <RowDefinition Height="auto"></RowDefinition>
                         </Grid.RowDefinitions>
-                        <Image Width="auto" Grid.Row="1" Stretch="UniformToFill" HorizontalAlignment="Center" Margin="5" Source="{Binding photo, TargetNullValue='..\..\Resources\icon.png'}"></Image>
+                        <Image Width="auto" Grid.Row="1" Stretch="UniformToFill" HorizontalAlignment="Center" Margin="5" Source="{Binding photo, TargetNullValue='Resources\icon.png'}"></Image>
                         <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="390"
                             TextWrapping="Wrap" HorizontalAlignment="Center" Margin="5 5" FontSize="26" Grid.Row="0">
                             <TextBlock.Text>
