--- a/WpfApp1/RegistrationWindow.xaml
+++ b/WpfApp1/RegistrationWindow.xaml
@@ -24,6 +24,9 @@
             <Image Source="/Resources/icon.png" Width="50" Height="40" />
             <Label Content="Регистратура" FontSize="36" VerticalAlignment="Center" Margin="20,0,0,0"/>
         </StackPanel>
+        
+        <Button Padding="100 0" Margin="10" Grid.Column="1" HorizontalAlignment="Right" FontFamily="Comic Sans MS" FontSize="20" Click="Button_Click">СПРАВКА</Button>
+
 
         <!-- Секция ввода данных -->
         <Grid Grid.Row="1" Grid.ColumnSpan="2" Margin="10,20,10,0">
@@ -100,7 +103,7 @@
                     Background="#FF424242" Foreground="White" BorderBrush="#FF707070" 
                     FontSize="22" Click="Button_Click_3" Margin="10"/>
             <Button x:Name="LoInButton" Content="Зарегистрировать" Grid.Column="1" 
-                    Height="46" Width="280" FontSize="22" Click="Button_Click" Margin="10"/>
+                    Height="46" Width="280" FontSize="22" Click="AddPatient" Margin="10"/>
             <Button Content="Врачи" Grid.Column="2" Height="46" Width="280" FontSize="22" 
                     Click="Button_Click_2" Margin="10"/>
         </Grid>
